fixing styling on small devices

--- a/src/app/(landing)/(components)/footer.module.css
+++ b/src/app/(landing)/(components)/footer.module.css
@@ -33,6 +33,12 @@
     gap: 2em;
 }
 
+@media (max-width: 800px) {
+    .link_container {
+        display: none;
+    }
+}
+
 .link_title {
     margin-bottom: 0.25em;
 }
