--- a/src/app/(landing)/(sections)/(contact)/contact.module.css
+++ b/src/app/(landing)/(sections)/(contact)/contact.module.css
@@ -14,7 +14,10 @@
 }
 
 @media (max-width: 800px) {
-    .body { width: 100%; }
+    .body { 
+        width: 100%; 
+        font-size: 0.9rem;
+    }
 }
 
 .links {
