--- a/src/app/(landing)/(sections)/(programming)/programming.module.css
+++ b/src/app/(landing)/(sections)/(programming)/programming.module.css
@@ -39,6 +39,12 @@
     margin-bottom: 2em;
 }
 
+@media (max-width: 800px) {
+    .date { font-size: 0.8rem; }
+    .title { font-size: 1rem; }
+    .description { font-size: 0.8rem; }
+}
+
 .short { display: none;}
 
 @media (max-width: 1000px) {
@@ -67,7 +73,6 @@
 }
 
 .project:hover {
-    /* background-color: rgba(0, 0, 0, 0.125); */
     color: white;
     background-color: black
 }
@@ -106,4 +111,10 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+
+@media (max-width: 800px) {
+    .project_date { font-size: 0.8rem; }
+    .project_title { font-size: 1rem; }
+    .project_description { font-size: 0.8rem; }
 }
